## Makefile.am: bzip2
##
## Copyright (C) 2005 Christian Schenk
## 
## This file is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published
## by the Free Software Foundation; either version 2, or (at your
## option) any later version.
## 
## This file is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this file; if not, write to the Free Software
## Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307,
## USA.

pkgincludedir = $(includedir)/miktex
pkglibdir = $(libdir)/miktex

pkglib_LTLIBRARIES = libmiktex-bz2.la

libmiktex_bz2_la_LDFLAGS = -no-undefined -version-info 1:0:0

libmiktex_bz2_la_SOURCES =
libmiktex_bz2_la_SOURCES += blocksort.c
libmiktex_bz2_la_SOURCES += bzlib.c
libmiktex_bz2_la_SOURCES += bzlib.h
libmiktex_bz2_la_SOURCES += bzlib.h
libmiktex_bz2_la_SOURCES += bzlib_private.h
libmiktex_bz2_la_SOURCES += bzlib_private.h
libmiktex_bz2_la_SOURCES += compress.c
libmiktex_bz2_la_SOURCES += crctable.c
libmiktex_bz2_la_SOURCES += decompress.c
libmiktex_bz2_la_SOURCES += huffman.c
libmiktex_bz2_la_SOURCES += libbz2-version.h
libmiktex_bz2_la_SOURCES += randtable.c

EXTRA_DIST = LICENSE
